Crudely fix katex display block overflow on mobile

--- a/themes/hello-friend-ng/assets/scss/_main.scss
+++ b/themes/hello-friend-ng/assets/scss/_main.scss
@@ -431,3 +431,8 @@ mark{
   padding-left: 20px;
   padding-right: 20px;
 }
+
+.katex{
+  overflow-x: auto;
+  overflow-y: hidden;
+}
